<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <TextView
        android:id="@+id/textViewOrderBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_list_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupOrderBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textViewOrderBy"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderBy">

        <RadioButton
            android:id="@+id/radioButtonOrderRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_rating" />

        <RadioButton
            android:id="@+id/radioButtonOrderMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_movie_name" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="savePreferences"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOrderBy" />
</androidx.constraintlayout.widget.ConstraintLayout>