<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.WriteReviewActivity">

        <TextView
            android:id="@+id/textViewMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_title"
            android:textColor="#757575"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerMovieTitle"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewMovieTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewMovieTitle" />

        <CheckBox
            android:id="@+id/checkBoxContainSpoilers"
            android:layout_width="375dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:text="@string/has_spoilers"
            app:layout_constraintStart_toStartOf="@+id/editTextWriteReview"
            app:layout_constraintTop_toBottomOf="@+id/editTextWriteReview" />

        <EditText
            android:id="@+id/editTextWriteReview"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="@+id/textViewWriteReview"
            app:layout_constraintTop_toBottomOf="@+id/textViewWriteReview"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewWriteReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/write_review"
            app:layout_constraintStart_toStartOf="@+id/textViewRating"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarRating" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rating"
            android:textColor="#757575"
            app:layout_constraintStart_toStartOf="@+id/spinnerMovieTitle"
            app:layout_constraintTop_toBottomOf="@+id/spinnerMovieTitle" />

        <RatingBar
            android:id="@+id/ratingBarRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:orientation="horizontal"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recommends_movie"
            app:layout_constraintStart_toStartOf="@+id/checkBoxContainSpoilers"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxContainSpoilers" />

        <RadioGroup
            android:id="@+id/radioGroupRecommends"
            android:layout_width="307dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/radioButtonRecommendsYes"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButtonRecommendsNo"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>